remove display flex causing spacing issue on message attachment

--- a/src/AttachmentPreview/AttachmentPreview.less
+++ b/src/AttachmentPreview/AttachmentPreview.less
@@ -178,7 +178,6 @@
 
   .AttachmentPreview--FooterBar {
     .zIndex--6;
-    display: flex;
     .justify--end();
     background-color: @neutral_black;
     position: fixed;
